# effortless-can-nav

./: .gitattributes  .gitignore  CMakeLists.txt  OWNER  README.md  build_deb64.sh  build_jetson.sh  build_rpi3.sh  build_rpi4.sh  build_test.sh  ecsh  install.sh  kkbtest
.github/workflows/: main.yaml
agvethcat/cmd/: cmd.cc
agvethcat/request/: request.cc
agvethcat/sock/: sock.cc  test.cc
agvethcat/test/: main.cc
agvethcat/utils/: utils.cc
config/: config.json
description/fastech/: FASTECH_Ezi-IO_EtherCAT.xml  FASTECH_Ezi-MOTIONGATE.xml  FASTECH_Ezi-SERVO2_EtherCAT.xml
description/picat/: picat_csp.json  picat_pp.json
include/: agvethcat.h  ecat_globals.h  ecat_lifecycle.h  ecat_node.h  ecat_slave.h  object_dictionary.h  timing.h
include/agvethcat/: cmd.h  request.h  sock.h  utils.h
include/ec-client/v1/: cmd.h  core.h  request.h
include/ec-server/v1/: core.h  ec_system.h  ecat_globals.h  ecat_lifecycle.h  ecat_node.h  ecat_slave.h  lifecycle.h  node.h  object_dictionary.h  slave.h  sock.h  utils.h
include/ec-server/v2/: core.h  ec_system.h  object_dictionary.h  sock.h  utils.h
include/ec-server/wheel/: core.h  object_dictionary.h  utils.h
pyqt/: display.py  ec_client_gui.py
src/: ecat_lifecycle.cc  ecat_node.cc  ecat_slave.cc  main.cc  timing.cc
src/ec-client/v1/cmd/: cmd.c  main.c
src/ec-client/v1/request/: request.c
src/ec-server/v1/: ec_system.c  ecat_lifecycle.c  ecat_node.c  ecat_slave.c  lifecycle.c  main.c  node.c  sock.c  utils.c
src/ec-server/v2/: ec_system.c  ec_system_modules.c  ec_system_utils.c  main.c  sock.c  utils.c
src/ec-server/wheel/: core.c  utils.c
sys.d/: dev  ecat-master.v1  ecat-master.v1.runner  ecat-master.v1.runner.service  ecat-master.v1.service  install
